--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4011,8 +4011,8 @@
 
 @font-face {
   font-family: Tallow;
-  src: url("tallow_sketch-webfont.eot");
-  src: url("tallow_sketch-webfont.eot?#iefix") format("embedded-opentype"), url("tallow_sketch-webfont.woff2") format("woff2"), url("tallow_sketch-webfont.woff") format("woff"), url("tallow_sketch-webfont.ttf") format("truetype"), url("tallow_sketch-webfont.svg#tallowsketch") format("svg");
+  src: url("/tallow_sketch-webfont.eot");
+  src: url("/tallow_sketch-webfont.eot?#iefix") format("embedded-opentype"), url("/tallow_sketch-webfont.woff2") format("woff2"), url("/tallow_sketch-webfont.woff") format("woff"), url("/tallow_sketch-webfont.ttf") format("truetype"), url("/tallow_sketch-webfont.svg#tallowsketch") format("svg");
   font-weight: normal;
   font-style: normal; }
 body {
