--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4354,7 +4354,7 @@ body {
 .sliding-panel-content {
   position: fixed;
   top: 0px;
-  right: 100%;
+  right: 0px;
   bottom: 0px;
   left: auto;
   width: 220px;
