--- a/assets/scss/partials/_global.scss
+++ b/assets/scss/partials/_global.scss
@@ -46,13 +46,13 @@ body {
   -webkit-overflow-scrolling: touch;
 
   ul {
-    padding: 0;
+    padding: 1em;
     margin: 0;
   }
 
   li {
     list-style: none;
-    padding: 1em auto;
+    padding: .5em auto;
   }
 
   li a {
