--- a/assets/scss/partials/_global.scss
+++ b/assets/scss/partials/_global.scss
@@ -62,6 +62,14 @@ body {
     padding: .5em 1em;
     text-decoration: none;
     font-family: 'Lato';
+
+    &:focus {
+      color: lighten ($dark-gray, 30%);
+    }
+
+    &:hover {
+      color: lighten ($dark-gray, 30%);
+    }
   }
 
   &.is-visible {
