editing hero height

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4483,7 +4483,8 @@ body {
   font-color: #d32f2f;
   text-align: center;
   color: #fff;
-  padding: 1.5em 0 3em; }
+  padding: 1.5em 0 3em;
+  max-height: 90vh; }
   .hero .hero-content {
     clear: both; }
   .hero img {
