--- a/assets/scss/partials/_hero.scss
+++ b/assets/scss/partials/_hero.scss
@@ -7,6 +7,7 @@
   padding: 1.5em 0 3em;
   min-height: 90vh;
     
+    
 .hero-content {
    clear: both;
 }
@@ -71,4 +72,14 @@
   }
 }
 
-
+@media screen and ( max-height: 720px ){
+    .hero-content {
+        h1 {
+            font-size: 100px;
+        }
+        
+        h2 {
+            font-size: 2em;
+        }
+    }
+}
