--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4523,7 +4523,7 @@ body {
   width: 38.46154%;
   float: right;
   text-align: right;
-  margin-top: 1.5em; }
+  margin-top: 1.25em; }
   .site-nav:last-child {
     margin-right: 0; }
   @media screen and (min-width: small) {
@@ -4557,6 +4557,9 @@ body {
     margin-left: 20px; }
 
 @media screen and (max-height: 720px) {
+  .hero-nav-bar.wrapper {
+    padding-bottom: 0; }
+
   .hero-content h1 {
     font-size: 100px; }
   .hero-content h2 {
