hero section edits

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4557,6 +4557,9 @@ body {
     margin-left: 20px; }
 
 @media screen and (max-height: 720px) {
+  .hero {
+    max-height: 90vh; }
+
   .hero-nav-bar.wrapper {
     padding-bottom: 0; }
 
