--- a/assets/scss/partials/_hero.scss
+++ b/assets/scss/partials/_hero.scss
@@ -74,6 +74,10 @@
 
 @media screen and ( max-height: 720px ){
     
+    .hero {
+        max-height: 90vh;
+    }
+    
     .hero-nav-bar.wrapper {
         padding-bottom: 0;
     }
