--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4558,7 +4558,7 @@ body {
 
 @media screen and (max-height: 720px) {
   .hero {
-    max-height: 90vh; }
+    min-height: 90vh; }
 
   .hero-nav-bar.wrapper {
     padding-bottom: 0; }
