--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -1,5 +1,5 @@
 // Basic settings for typography, using Bourbon font-family addon
-$tallow: 'Tallow';
+$tallow: 'Tallow', 'Slabo 27px', Georgia, serif;
 $noticia: 'Noticia Text';
 $lato: 'Lato';
 $sans-serif: $helvetica;
