--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
     <!-- endinject -->
     <link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon-192x192.png" sizes="192x192">
-    <link href='http://fonts.googleapis.com/css?family=Lato:700|Noticia+Text:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato:700|Noticia+Text:400,700|Slabo+27px' rel='stylesheet' type='text/css'>
   </head>
 <body>
      <nav class="js-menu sliding-panel-content">
