--- a/assets/scss/partials/_global.scss
+++ b/assets/scss/partials/_global.scss
@@ -36,9 +36,9 @@ body {
   $sliding-panel-color-hover: #fff;
   $sliding-panel-background-focus: lighten($sliding-panel-background, 5%);
 
-  @include position(fixed, 0px 0px 0px auto);
+  @include position(fixed, 0px auto 0px 0px);
   @include size(300px 100%);
-  @include transform(translateX(110%));
+  @include transform(translateX(-300px));
   @include transition(all 0.25s linear);
   background: $sliding-panel-background;
   z-index: 999999;
