--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,6 +7,7 @@
 @import "grid-settings";
 @import "neat/neat";
 @import "hover/hover";
+@import "font-awesome/font-awesome";
 
 // Base
 @import "base/settings";
