--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,6 @@
     <img src="assets/img/logo-white.png" alt="Jordan Barhorst - Cincinnati Web Design">
     <h5>Jordan Barhorst</h5>
       <p>4318 Plainville Rd. Cincinnati, OH 45227 | <a href="tel:9376385718">937.638.5718</a> | <a href="mailto:jordanbarhorst@gmail.com">jordan.barhorst@gmail.com</a><br />&copy; 2015 Jordan Barhorst. All Rights Reserved.</p>
-      <i class="fa fa-camera-retro fa-lg"></i>
+      <i class="fa fa-camera-retro"></i>
   </div>
 </footer>
