--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6045,8 +6045,8 @@ ul, ol {
   margin-right: 2.5641%;
   width: 120.51282%;
   margin-right: 0;
-  border-top: 1px solid #DDD;
   color: #999;
+  background-color: #d32f2f;
   font-size: 15px;
   padding-top: 30px;
   width: 100%; }
