--- a/assets/scss/partials/_footer.scss
+++ b/assets/scss/partials/_footer.scss
@@ -1,8 +1,8 @@
 .site-footer {
   @include span-columns(12);
   @include omega();
-  border-top: 1px solid $light-gray;
   color: $medium-gray;
+  background-color: $primary;
   font-size: 15px;
   padding-top: $gutter;
   width: 100%;
