--- a/assets/scss/partials/_footer.scss
+++ b/assets/scss/partials/_footer.scss
@@ -20,14 +20,15 @@
   }
     
   p {
-    color: darken($primary, 30%);
+    color: darken($primary, 10%);
       
     a {
-      color: darken($primary,30%);
+      color: darken($primary,10%);
       transform: color ease .5s;
+      text-decoration: underline;
         
         &:hover {
-          color: darken($primary, 50%);
+          color: darken($primary, 30%);
         }
     }
   }
