adding font-awesome social icons

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6061,9 +6061,9 @@ ul, ol {
     letter-spacing: .05em;
     text-transform: uppercase; }
   .site-footer p {
-    color: #ab2424; }
+    color: #962020; }
     .site-footer p a {
-      color: #ab2424;
+      color: #962020;
       transform: color ease .5s;
       text-decoration: underline; }
       .site-footer p a:hover {
