--- a/assets/scss/partials/_global.scss
+++ b/assets/scss/partials/_global.scss
@@ -111,3 +111,16 @@ body {
      padding-top: 6%;
   }
 }
+
+@media (max-width: 1050px) {
+  .featured-post-list > li:nth-child(2) .portfolio-overlay:hover, .featured-post-list > li:nth-child(3) .portfolio-overlay:hover {
+     padding-top: 4%;
+     
+      a {
+         line-height: 4em;
+      }
+      
+      h3 {
+         font-size: 1.8em;
+      }
+  }
