--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6237,7 +6237,15 @@ body {
     .featured-post-list > li:nth-child(2) .portfolio-overlay:hover a, .featured-post-list > li:nth-child(3) .portfolio-overlay:hover a {
       line-height: 4em; }
     .featured-post-list > li:nth-child(2) .portfolio-overlay:hover h3, .featured-post-list > li:nth-child(3) .portfolio-overlay:hover h3 {
-      font-size: 1.8em; } }
+      font-size: 1.8em; }
+
+  .bottom-portfolio-item .portfolio-overlay {
+    margin-top: 25%; }
+    .bottom-portfolio-item .portfolio-overlay a {
+      line-height: 3em;
+      border: 3px; }
+    .bottom-portfolio-item .portfolio-overlay h4 {
+      font-size: 1.25em; } }
 .site-header {
   float: left;
   display: block;
