--- a/assets/scss/partials/_global.scss
+++ b/assets/scss/partials/_global.scss
@@ -124,4 +124,18 @@ body {
          font-size: 1.8em;
       }
     }
+    
+   .bottom-portfolio-item .portfolio-overlay {
+      margin-top: 25%;
+      
+      a {
+         line-height: 3em;
+         border: 3px;
+         
+      }   
+       
+      h4 {
+         font-size: 1.25em;
+      }
+   }
   }
