media queries for homepage grid

--- a/assets/scss/partials/_global.scss
+++ b/assets/scss/partials/_global.scss
@@ -117,7 +117,8 @@ body {
      padding-top: 4%;
      
       a {
-         line-height: 4em;
+         line-height: 3em;
+         border: 3px;
       }
       
       h3 {
