--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6235,7 +6235,8 @@ body {
   .featured-post-list > li:nth-child(2) .portfolio-overlay:hover, .featured-post-list > li:nth-child(3) .portfolio-overlay:hover {
     padding-top: 4%; }
     .featured-post-list > li:nth-child(2) .portfolio-overlay:hover a, .featured-post-list > li:nth-child(3) .portfolio-overlay:hover a {
-      line-height: 4em; }
+      line-height: 3em;
+      border: 3px; }
     .featured-post-list > li:nth-child(2) .portfolio-overlay:hover h3, .featured-post-list > li:nth-child(3) .portfolio-overlay:hover h3 {
       font-size: 1.8em; }
 
