--- a/assets/scss/partials/_global.scss
+++ b/assets/scss/partials/_global.scss
@@ -118,7 +118,7 @@ body {
      
       a {
          line-height: 3em;
-         border: 3px;
+         border: 3px solid #fff;
       }
       
       h3 {
@@ -127,11 +127,11 @@ body {
     }
     
    .bottom-portfolio-item .portfolio-overlay {
-      margin-top: 25%;
+      padding-top: 25%;
       
       a {
          line-height: 3em;
-         border: 3px;
+         border: 3px solid #fff;
          
       }   
        
