fixing buttons on homepage grid

--- a/assets/scss/partials/_global.scss
+++ b/assets/scss/partials/_global.scss
@@ -132,6 +132,7 @@ body {
       a {
          line-height: 3em;
          border: 3px solid #fff;
+         padding: .5em 1em;
          
       }   
        
