--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6244,7 +6244,8 @@ body {
     padding-top: 25%; }
     .bottom-portfolio-item .portfolio-overlay a {
       line-height: 3em;
-      border: 3px solid #fff; }
+      border: 3px solid #fff;
+      padding: .5em 1em; }
     .bottom-portfolio-item .portfolio-overlay h4 {
       font-size: 1.25em; } }
 .site-header {
