--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6229,15 +6229,15 @@ body {
     height: 1.3em; }
 
 @media (max-width: 1400px) {
-  .featured-post-list > li:nth-child(2) .portfolio-overlay:hover, .featured-post-list > li:nth-child(3) .portfolio-overlay:hover {
+  .featured-post-list > li:nth-child(2) .portfolio-overlay:hover, .featured-post-list > li:nth-child(3) .portfolio-overlay {
     padding-top: 6%; } }
 @media (max-width: 1050px) {
-  .featured-post-list > li:nth-child(2) .portfolio-overlay:hover, .featured-post-list > li:nth-child(3) .portfolio-overlay:hover {
+  .featured-post-list > li:nth-child(2) .portfolio-overlay:hover, .featured-post-list > li:nth-child(3) .portfolio-overlay {
     padding-top: 4%; }
-    .featured-post-list > li:nth-child(2) .portfolio-overlay:hover a, .featured-post-list > li:nth-child(3) .portfolio-overlay:hover a {
+    .featured-post-list > li:nth-child(2) .portfolio-overlay:hover a, .featured-post-list > li:nth-child(3) .portfolio-overlay a {
       line-height: 3em;
       border: 3px solid #fff; }
-    .featured-post-list > li:nth-child(2) .portfolio-overlay:hover h3, .featured-post-list > li:nth-child(3) .portfolio-overlay:hover h3 {
+    .featured-post-list > li:nth-child(2) .portfolio-overlay:hover h3, .featured-post-list > li:nth-child(3) .portfolio-overlay h3 {
       font-size: 1.75em; }
 
   .bottom-portfolio-item .portfolio-overlay {
