--- a/assets/scss/partials/_global.scss
+++ b/assets/scss/partials/_global.scss
@@ -119,6 +119,7 @@ body {
       a {
          line-height: 3em;
          border: 3px solid #fff;
+         padding: .5em 1em;
       }
       
       h3 {
