--- a/assets/scss/partials/_global.scss
+++ b/assets/scss/partials/_global.scss
@@ -110,6 +110,10 @@ body {
   .featured-post-list > li:nth-child(2) .portfolio-overlay, .featured-post-list > li:nth-child(3) .portfolio-overlay {
      padding-top: 6%;
   }
+    
+ .bottom-portfolio-item .portfolio-overlay {
+      padding-top: 25%;
+ }
 }
 
 @media (max-width: 1050px) {
@@ -128,7 +132,6 @@ body {
     }
     
    .bottom-portfolio-item .portfolio-overlay {
-      padding-top: 25%;
       
       a {
          line-height: 3em;
