--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,6 +29,12 @@
             <li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
             {% endif %}{% endfor %}
         </ul>
+        <ul class="slideout-social">
+           <li><a class="fbook-nav" target="_blank" href="http://www.facebook.com/jordanbarhorst">Facebook</a></li>
+            <li><a class="twitter-nav" target="_blank" href="http://www.twitter.com/jordanbarhorst">Twitter</a></li>
+            <li><a class="dribbble-nav" target="_blank" href="http://www.dribbble.com/jordanbarhorst">Dribbble</a></li>
+            <li><a class="github-nav" target="_blank" href="http://www.github.com/jordanbarhorst">GitHub</a></li>
+        </ul>
     </nav>
     {% include hero.html %}
     <div class="page-content">
