--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6227,6 +6227,8 @@ body {
   outline: none; }
   .sliding-panel-button img {
     height: 1.3em; }
+  .sliding-panel-button .social-slideout {
+    margin-top: 10em; }
 
 @media (max-width: 1400px) {
   .featured-post-list > li:nth-child(2) .portfolio-overlay, .featured-post-list > li:nth-child(3) .portfolio-overlay {
