--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6252,6 +6252,9 @@ body {
     padding: .5em 1em; }
   .bottom-portfolio-item .portfolio-overlay h4 {
     font-size: 1.25em; } }
+@media (max-width: 767px) {
+  .featured-post-list > li {
+    width: 100%; } }
 .site-header {
   float: left;
   display: block;
