add media queries for mobile devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6254,7 +6254,7 @@ body {
     font-size: 1.25em; } }
 @media (max-width: 767px) {
   .featured-post-list > li {
-    width: 100%; } }
+    width: 100% !important; } }
 .site-header {
   float: left;
   display: block;
