--- a/assets/scss/partials/_global.scss
+++ b/assets/scss/partials/_global.scss
@@ -154,6 +154,6 @@ body {
 
 @media (max-width: 767px) {
     .featured-post-list > li {
-        width: 100%;
+        width: 100%!important;
     }
 }
