--- a/assets/scss/partials/_global.scss
+++ b/assets/scss/partials/_global.scss
@@ -153,7 +153,10 @@ body {
   }
 
 @media (max-width: 767px) {
+    
     .featured-post-list > li {
         width: 100%!important;
+        max-width: 100%!important;
+        min-width: 100%!important;
     }
 }
