--- a/assets/scss/partials/_global.scss
+++ b/assets/scss/partials/_global.scss
@@ -159,4 +159,8 @@ body {
         max-width: 100%!important;
         min-width: 100%!important;
     }
+    
+    .bottom-post-list {
+        display: none;
+    }
 }
