--- a/assets/scss/partials/_global.scss
+++ b/assets/scss/partials/_global.scss
@@ -138,6 +138,17 @@ body {
     }
     
    .bottom-portfolio-item .portfolio-overlay {
+       
+       .hero {
+           h1 {
+              line-height: 115px;
+              margin-bottom: .15em;
+           }
+           
+           .big-break {
+               display: none;
+           }
+       }
       
       a {
          line-height: 3em;
@@ -154,13 +165,29 @@ body {
 
 @media (max-width: 767px) {
     
+    .hero-nav-bar.wrapper {
+        padding: 0 2em;
+    }
+    
     .featured-post-list > li {
         width: 100%!important;
         max-width: 100%!important;
         min-width: 100%!important;
     }
     
+    .featured-post-list > li:nth-child(2) .portfolio-overlay, .featured-post-list > li:nth-child(3) .portfolio-overlay {
+        padding-top: 10%;
+    }
+    
     .bottom-post-list {
         display: none;
+    }
+    
+    .featured-post-list > li .portfolio-item .portfolio-overlay {
+        opacity: 0.95;
+    }
+    
+    .site-footer {
+        padding-top: 155px;
     }
 }
