adding styles for mobile devices

--- a/assets/scss/partials/_global.scss
+++ b/assets/scss/partials/_global.scss
@@ -139,7 +139,7 @@ body {
     
    .bottom-portfolio-item .portfolio-overlay {
        
-       .hero {
+       .hero-content {
            h1 {
               line-height: 115px;
               margin-bottom: .15em;
