--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6246,10 +6246,10 @@ body {
     .featured-post-list > li:nth-child(2) .portfolio-overlay h3, .featured-post-list > li:nth-child(3) .portfolio-overlay h3 {
       font-size: 1.75em; }
 
-  .bottom-portfolio-item .portfolio-overlay .hero h1 {
+  .bottom-portfolio-item .portfolio-overlay .hero-content h1 {
     line-height: 115px;
     margin-bottom: .15em; }
-  .bottom-portfolio-item .portfolio-overlay .hero .big-break {
+  .bottom-portfolio-item .portfolio-overlay .hero-content .big-break {
     display: none; }
   .bottom-portfolio-item .portfolio-overlay a {
     line-height: 3em;
