--- a/assets/scss/partials/_global.scss
+++ b/assets/scss/partials/_global.scss
@@ -123,6 +123,18 @@ body {
 }
 
 @media (max-width: 1050px) {
+    
+    .hero {
+           h1 {
+              line-height: 115px;
+              margin-bottom: .15em;
+           }
+           
+           .big-break {
+               display: none;
+           }
+       }
+    
   .featured-post-list > li:nth-child(2) .portfolio-overlay, .featured-post-list > li:nth-child(3) .portfolio-overlay {
      padding-top: 4%;
      
@@ -139,16 +151,6 @@ body {
     
    .bottom-portfolio-item .portfolio-overlay {
        
-       .hero-content {
-           h1 {
-              line-height: 115px;
-              margin-bottom: .15em;
-           }
-           
-           .big-break {
-               display: none;
-           }
-       }
       
       a {
          line-height: 3em;
@@ -164,6 +166,7 @@ body {
   }
 
 @media (max-width: 767px) {
+    
     
     .hero-nav-bar.wrapper {
         padding: 0 2em;
