--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5850,6 +5850,74 @@ a {
     color: #2c5999;
     outline: none; }
 
+@media screen and (max-height: 720px) {
+  .hero {
+    min-height: 90vh; }
+
+  .hero-nav-bar.wrapper {
+    padding-bottom: 0; }
+
+  .hero-content {
+    padding-top: 0; }
+    .hero-content img {
+      margin-bottom: .5em; }
+    .hero-content h1 {
+      font-size: 100px; }
+    .hero-content h2 {
+      font-size: 1.8em; }
+    .hero-content a {
+      line-height: 5em; } }
+@media screen and (min-height: 860px) {
+  .hero {
+    max-height: 800px; } }
+@media (max-width: 1400px) {
+  .featured-post-list > li:nth-child(2) .portfolio-overlay, .featured-post-list > li:nth-child(3) .portfolio-overlay {
+    padding-top: 6%; }
+
+  .bottom-portfolio-item .portfolio-overlay {
+    padding-top: 25%; } }
+@media (max-width: 1050px) {
+  .hero h1 {
+    line-height: 115px;
+    margin-bottom: .15em; }
+  .hero .big-break {
+    display: none; }
+
+  .featured-post-list > li:nth-child(2) .portfolio-overlay, .featured-post-list > li:nth-child(3) .portfolio-overlay {
+    padding-top: 4%; }
+    .featured-post-list > li:nth-child(2) .portfolio-overlay a, .featured-post-list > li:nth-child(3) .portfolio-overlay a {
+      line-height: 3em;
+      border: 3px solid #fff;
+      padding: .5em 1em; }
+    .featured-post-list > li:nth-child(2) .portfolio-overlay h3, .featured-post-list > li:nth-child(3) .portfolio-overlay h3 {
+      font-size: 1.75em; }
+
+  .bottom-portfolio-item .portfolio-overlay a {
+    line-height: 3em;
+    border: 3px solid #fff;
+    padding: .5em 1em; }
+  .bottom-portfolio-item .portfolio-overlay h4 {
+    font-size: 1.25em; } }
+@media (max-width: 767px) {
+  .hero-nav-bar.wrapper {
+    padding: 0 2em; }
+
+  .featured-post-list > li {
+    width: 100% !important;
+    max-width: 100% !important;
+    min-width: 100% !important; }
+
+  .featured-post-list > li:nth-child(2) .portfolio-overlay, .featured-post-list > li:nth-child(3) .portfolio-overlay {
+    padding-top: 10%; }
+
+  .bottom-post-list {
+    display: none; }
+
+  .featured-post-list > li .portfolio-item .portfolio-overlay {
+    opacity: 0.95; }
+
+  .site-footer {
+    padding-top: 215px; } }
 body {
   background-color: white; }
 
@@ -6230,54 +6298,6 @@ body {
   .sliding-panel-button .social-slideout {
     margin-top: 10em; }
 
-@media (max-width: 1400px) {
-  .featured-post-list > li:nth-child(2) .portfolio-overlay, .featured-post-list > li:nth-child(3) .portfolio-overlay {
-    padding-top: 6%; }
-
-  .bottom-portfolio-item .portfolio-overlay {
-    padding-top: 25%; } }
-@media (max-width: 1050px) {
-  .hero h1 {
-    line-height: 115px;
-    margin-bottom: .15em; }
-  .hero .big-break {
-    display: none; }
-
-  .featured-post-list > li:nth-child(2) .portfolio-overlay, .featured-post-list > li:nth-child(3) .portfolio-overlay {
-    padding-top: 4%; }
-    .featured-post-list > li:nth-child(2) .portfolio-overlay a, .featured-post-list > li:nth-child(3) .portfolio-overlay a {
-      line-height: 3em;
-      border: 3px solid #fff;
-      padding: .5em 1em; }
-    .featured-post-list > li:nth-child(2) .portfolio-overlay h3, .featured-post-list > li:nth-child(3) .portfolio-overlay h3 {
-      font-size: 1.75em; }
-
-  .bottom-portfolio-item .portfolio-overlay a {
-    line-height: 3em;
-    border: 3px solid #fff;
-    padding: .5em 1em; }
-  .bottom-portfolio-item .portfolio-overlay h4 {
-    font-size: 1.25em; } }
-@media (max-width: 767px) {
-  .hero-nav-bar.wrapper {
-    padding: 0 2em; }
-
-  .featured-post-list > li {
-    width: 100% !important;
-    max-width: 100% !important;
-    min-width: 100% !important; }
-
-  .featured-post-list > li:nth-child(2) .portfolio-overlay, .featured-post-list > li:nth-child(3) .portfolio-overlay {
-    padding-top: 10%; }
-
-  .bottom-post-list {
-    display: none; }
-
-  .featured-post-list > li .portfolio-item .portfolio-overlay {
-    opacity: 0.95; }
-
-  .site-footer {
-    padding-top: 215px; } }
 .site-header {
   float: left;
   display: block;
@@ -6413,23 +6433,6 @@ body {
     float: right;
     margin-left: 20px; }
 
-@media screen and (max-height: 720px) {
-  .hero {
-    min-height: 90vh; }
-
-  .hero-nav-bar.wrapper {
-    padding-bottom: 0; }
-
-  .hero-content {
-    padding-top: 0; }
-    .hero-content img {
-      margin-bottom: .5em; }
-    .hero-content h1 {
-      font-size: 100px; }
-    .hero-content h2 {
-      font-size: 1.8em; }
-    .hero-content a {
-      line-height: 5em; } }
 /* -------------------------------------------------------------------------*/
 /* Layout */
 
