--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -12,6 +12,7 @@
 // Base
 @import "base/settings";
 @import "base/typography";
+@import "base/media-queries";
 @import "base/base";
 
 // Components
