--- a/assets/scss/base/_media-queries.scss
+++ b/assets/scss/base/_media-queries.scss
@@ -32,7 +32,7 @@
 @media screen and ( min-height: 860px ){
     
     .hero {
-        max-height: 800px;
+        max-height: 800px!important;
     }
 }
 
