adding media queries for height

--- a/assets/scss/base/_media-queries.scss
+++ b/assets/scss/base/_media-queries.scss
@@ -32,7 +32,7 @@
 @media screen and ( min-height: 860px ){
     
     .hero {
-        min-height: 0;
+        min-height: 0!important;
         height: 800px!important;
     }
 }
