--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5869,7 +5869,7 @@ a {
       line-height: 5em; } }
 @media screen and (min-height: 860px) {
   .hero {
-    min-height: 0;
+    min-height: 0 !important;
     height: 800px !important; } }
 @media (max-width: 1400px) {
   .featured-post-list > li:nth-child(2) .portfolio-overlay, .featured-post-list > li:nth-child(3) .portfolio-overlay {
