--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5919,7 +5919,7 @@ a {
 
   .site-footer {
     margin-top: 280px;
-    padding-top: 50px; } }
+    padding-top: 50px !important; } }
 body {
   background-color: white; }
 
