--- a/assets/scss/base/_media-queries.scss
+++ b/assets/scss/base/_media-queries.scss
@@ -117,6 +117,6 @@
     
     .site-footer {
         margin-top: 280px;
-        padding-top: 50px;
+        padding-top: 50px!important;
     }
 }
