--- a/assets/scss/base/_media-queries.scss
+++ b/assets/scss/base/_media-queries.scss
@@ -98,7 +98,7 @@
     }
     
     .featured-post-list {
-        max-height: 99999px;
+        max-height: 99999px!important;
     }
     
     .featured-post-list > li {
