--- a/assets/scss/base/_media-queries.scss
+++ b/assets/scss/base/_media-queries.scss
@@ -130,7 +130,7 @@
     .hero {
         
         h1 {
-            font-size: 80px;
+            font-size: 80px!important;
         }
         
         h2 {
