--- a/assets/scss/base/_media-queries.scss
+++ b/assets/scss/base/_media-queries.scss
@@ -93,7 +93,7 @@
 @media (max-width: 767px) {
     
     .hero {
-        min-height: 0!important;
+        min-height: 0vh!important;
     }
     
     .hero-nav-bar.wrapper {
