--- a/assets/scss/base/_media-queries.scss
+++ b/assets/scss/base/_media-queries.scss
@@ -92,6 +92,9 @@
 
 @media (max-width: 767px) {
     
+    .hero {
+        max-height: 70vh;
+    }
     
     .hero-nav-bar.wrapper {
         padding: 0 2em;
