--- a/assets/scss/base/_media-queries.scss
+++ b/assets/scss/base/_media-queries.scss
@@ -92,7 +92,9 @@
 
 @media (max-width: 767px) {
     
-    
+    .hero {
+        min-height: 2px!important;
+    }
     .hero-nav-bar.wrapper {
         padding: 0 2em;
     }
@@ -133,5 +135,34 @@
         h2 {
             font-size: 1.7em;
         }
+    }
+}
+
+@media (max-width: 565px) {
+    .featured-post-list > li:nth-child(2) .portfolio-overlay, .featured-post-list > li:nth-child(3) .portfolio-overlay {
+        padding-top: 5%;
+    }
+}
+
+@media (max-width: 454px) {
+    
+    .featured-post-list > li .portfolio-item .portfolio-overlay a {
+        line-height: 2em;
+        border: 3px solid #fff;
+        padding: .5em 1em;
+    }
+    
+    .featured-post-list > li:nth-child(1) .portfolio-overlay {
+        padding-top: 10%;
+    }
+    
+    .featured-post-list > li:nth-child(2) .portfolio-overlay, .featured-post-list > li:nth-child(3) .portfolio-overlay {
+        padding-top: 5%;
+    }
+}
+
+@media (max-width: 363px) {
+    .featured-post-list > li:nth-child(2) .portfolio-overlay, .featured-post-list > li:nth-child(3) .portfolio-overlay {
+        padding-top: 1%;
     }
 }
