--- a/assets/scss/base/_media-queries.scss
+++ b/assets/scss/base/_media-queries.scss
@@ -1,4 +1,4 @@
-@media screen and ( max-height: 720px ) and (min-width: 767px){
+@media screen and ( max-height: 720px ){
     
     .hero {
         min-height: 90vh;
