--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -12,7 +12,6 @@
 // Base
 @import "base/settings";
 @import "base/typography";
-@import "base/media-queries";
 @import "base/base";
 
 // Components
@@ -25,6 +24,9 @@
 @import "partials/global";
 @import "partials/header";
 @import "partials/hero";
+
+// Media Queries
+@import "base/media-queries";
 
 /* -------------------------------------------------------------------------*/
 /* Layout */
