--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@
     <meta property="og:image" content="{{ site.baseurl }}/favicon-192x192.png">
     <meta property="og:type" content="website">
     <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#d32f2f">
     <link rel="canonical" href="{{ page.url | prepend: site.url }}">
     <!-- inject:css -->
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
