--- a/assets/scss/partials/_hero.scss
+++ b/assets/scss/partials/_hero.scss
@@ -72,3 +72,25 @@
     margin-left: 20px;
   }
 }
+
+.sub-hero {
+  width: 100%;
+  background-color: $primary;
+  font-color: $primary;
+  text-align: center;
+  color: #fff;
+  padding: 1.5em 0 3em;
+  min-height: 40vh;
+  
+    
+    
+.hero-content {
+   clear: both;
+}
+    
+  h1 {
+    font-size: 130px;
+    text-transform: uppercase;
+    margin-bottom: 0;
+  }
+}
