adding sub-hero

--- a/_includes/sub-hero.html
+++ b/_includes/sub-hero.html
@@ -11,7 +11,7 @@
   </div>
   <div class="hero-content wrapper">
       <img src="assets/img/jordan-circle.png" alt="Jordan Barhorst - a Cincinnati Web Designer">
-      <h1>Hey, I'm Jordan</h1>
+      <h1>{{ post.title }}</h1>
       <h2>I’m a front end web designer and developer from <span class="big-break"><br /></span><span class="bold-italic">Cincinnati, Ohio.</span></h2>
       <a class="white hollow-button">Check out some stuff I've made</a>
   </div>
