--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,24 @@
 ---
 layout: default
 ---
+<div class="sub-hero">
+  <div class="hero-nav-bar wrapper">
+      <div class="logo-spot">
+          <img src="assets/img/logo-white.png" alt="Jordan Barhorst - Cincinnati Web Design">
+      </div>
+       <nav class="site-nav wrapper">
+              <ul>
+                  <li><a class="js-menu-trigger sliding-panel-button">Menu</a></li>
+              </ul>
+      </nav>
+  </div>
+  <div class="hero-content wrapper">
+      <img src="assets/img/jordan-circle.png" alt="Jordan Barhorst - a Cincinnati Web Designer">
+      <h1>{{ post.title }}</h1>
+      <h2>I’m a front end web designer and developer from <span class="big-break"><br /></span><span class="bold-italic">Cincinnati, Ohio.</span></h2>
+      <a class="white hollow-button">Check out some stuff I've made</a>
+  </div>
+</div>
 <div class="post">
   <header class="post-header">
     <h3 class="post-title">{{ page.title }}</h3>
