adding styles for blog posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,8 +14,8 @@ layout: default
   </div>
   <div class="hero-content wrapper">
       <h1>{{ page.title }}</h1>
-      <h2>I’m a front end web designer and developer from <span class="big-break"><br /></span><span class="bold-italic">Cincinnati, Ohio.</span></h2>
-      <a class="white hollow-button">Check out some stuff I've made</a>
+      <h2>{{ page.subline }}</h2>
+      <a href="{{ page.button-link }}" class="white hollow-button">{{ page.button-text }}</a>
   </div>
 </div>
 <div class="post">
