--- a/assets/scss/partials/_hero.scss
+++ b/assets/scss/partials/_hero.scss
@@ -75,8 +75,7 @@
 
 .sub-hero {
   width: 100%;
-  background-color: $primary;
-  font-color: $primary;
+  background-size: cover;
   text-align: center;
   color: #fff;
   padding: 1.5em 0 3em;
