--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
 <body>
        <nav class="js-menu sliding-panel-content">
         <ul>
+           <li><a href="index.html">Home</a></li>
             {% for page in site.pages %}{% if page.title %}
             <li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
             {% endif %}{% endfor %}
