--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="site-footer">
   <div class="footer-content wrapper">
-    <img src="assets/img/logo-white.png" alt="Jordan Barhorst - Cincinnati Web Design">
+      <a href="index.html"><img src="/assets/img/logo-white.png" alt="Jordan Barhorst - Cincinnati Web Design"></a>
     <h5>Jordan Barhorst</h5>
       <p>4318 Plainville Rd. Cincinnati, OH 45227 | <a href="tel:9376385718">937.638.5718</a> | <a href="mailto:jordanbarhorst@gmail.com">jordan.barhorst@gmail.com</a><br />&copy; 2015 Jordan Barhorst. All Rights Reserved.</p>
       <p><a target="_blank" href="https://www.facebook.com/jordanbarhorst"><i class="fa fa-facebook fa-lg fa-fw"></i></a><a target="_blank" href="http://twitter.com/jordanbarhorst"><i class="fa fa-twitter fa-lg fa-fw"></i></a><a target="_blank" href="dribbble.com/jordanbarhorst"><i class="fa fa-dribbble fa-lg fa-fw"></i></a><a target="_blank" href="https://github.com/jordanbarhorst"><i class="fa fa-github fa-lg fa-fw"></i></a></p>
