adding styles for blog posts

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,7 +1,7 @@
 <div class="hero">
   <div class="hero-nav-bar wrapper">
       <div class="logo-spot">
-          <a href="index.html"><img src="assets/img/logo-white.png" alt="Jordan Barhorst - Cincinnati Web Design"></a>
+          <a href="{{ site.url }}"><img src="assets/img/logo-white.png" alt="Jordan Barhorst - Cincinnati Web Design"></a>
       </div>
        <nav class="site-nav wrapper">
               <ul>
