--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <div class="sub-hero" style="background-image:url('/assets/img/portfolio-items/{{ page.heroimage }}');">
   <div class="hero-nav-bar wrapper">
       <div class="logo-spot">
-          <a href="index.html"><img src="/assets/img/logo-white.png" alt="Jordan Barhorst - Cincinnati Web Design"></a>
+          <a href="{{ site.url }}"><img src="/assets/img/logo-white.png" alt="Jordan Barhorst - Cincinnati Web Design"></a>
       </div>
        <nav class="site-nav wrapper">
               <ul>
