--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,8 +13,9 @@ layout: default
       </nav>
   </div>
   <div class="hero-content wrapper">
+      <!-- DATE <span class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</span> -->
+      <span class="post-meta">{{ page.category }}</span>
       <h1>{{ page.title }}</h1>
-      <span class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</span>
       <h3>{{ page.subline }}</h3>
       <a href="{{ page.button-link }}" class="white hollow-button">{{ page.button-text }}</a>
   </div>
