--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
        <nav class="js-menu sliding-panel-content">
         <ul>
            <li><a href="{{ site.url }}">Home</a></li>
-            {% for page in site.pages %}{% if page.title %}
+            {% for page in site.pages | sort:weight %}{% if page.title %}
             <li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
             {% endif %}{% endfor %}
         </ul>
