--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,8 @@
        <nav class="js-menu sliding-panel-content">
         <ul>
            <li><a href="{{ site.url }}">Home</a></li>
-            {% for page in site.pages | sort:weight %}{% if page.title %}
+           {% assign sorted_pages = (site.pages | sort: 'weight') %}
+            {% for page in sorted_pages %}{% if page.title %}
             <li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
             {% endif %}{% endfor %}
         </ul>
