--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,9 @@
 <body>
        <nav class="js-menu sliding-panel-content">
         <ul>
-            {% for page in site.pages %}{% if page.title %}
+            <li><a href="{{ site.url }}">Home</a></li>
+            {% assign sorted_pages = (site.pages | sort: 'weight') %}
+            {% for page in sorted_pages %}{% if page.title %}
             <li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
             {% endif %}{% endfor %}
         </ul>
